# ChangeLog for app-emacs/nxml-gentoo-schemas
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  +files/81nxml-gentoo-schemas-gentoo.el,
  +nxml-gentoo-schemas-20070130.ebuild, +files/glsa.rnc, +files/guide.rnc,
  +files/metadata.rnc, +files/project.rnc, +files/schemas.xml,
  +metadata.xml:
  initial commit, taken from Flameeyes' overlay: provides additions to XML
  mode so Gentoo specific schemes can be edited
