@@ -4,6 +4,6 @@ AUX guide.rnc 7425 RMD160 7e0326ce40061a554be223c140cd3905eca8c447 SHA1 74f4566b
 AUX metadata.rnc 3590 RMD160 f85938db513351d3ac861bce9035fc26438b8413 SHA1 1942d48033dadaf0b8eab07193c2e5495aad5532 SHA256 65991e99d148a46433b6ba4aebefdd62466d567f3bae765707f133b6700dc46d
 AUX project.rnc 6196 RMD160 dcd26b9bc7f96c49c216dc8c2c4b9be93e4e80aa SHA1 3d5ac17809fef646f58bad635979bc5d85a78153 SHA256 2d2eae5e3818c3baa7f964fb05d1cb35028f812bc744871551a36c0c2601342f
 AUX schemas.xml 362 RMD160 ea96488c629255d3d92ba42d998cce002d9501e9 SHA1 1beea08576278ad25f466c4132116df79828dab2 SHA256 7b3a78bff634eded9eb0c77ebcbb4959d98df0dbc3fe0efd590622b3ab55218c
-EBUILD nxml-gentoo-schemas-20070130.ebuild 626 RMD160 af686bbd2b2ec13e4e4e094acc46074eb87f2a1e SHA1 7fc8b759d9efe3321ac3f6e7501292075f5dbc01 SHA256 030ee81115327bbb2c01f22f7e7099730b6feca617e9047a9b56c8a2a5f16e05
-MISC ChangeLog 506 RMD160 6fba67bf9a7975e840dc2c2e803d6b348587b814 SHA1 8d5594eca38b93aad75a378701b82a74b8aaca04 SHA256 57a45e812e268538a65dec519f2c9b89de4cea354d2592d14c7b67dafd6454b9
+EBUILD nxml-gentoo-schemas-20070130.ebuild 699 RMD160 59e6b555e3b79190cf2be796f4564d5b81c293b7 SHA1 dc40227becaf599c614b25b0ce00089a3a19af4d SHA256 baab1661f6fde04280cfe994708965e1b67bc4d1b1b4d13259a6f9509bf0ee31
+MISC ChangeLog 624 RMD160 6d47d59752fa96c217960203832518a9c53a1e23 SHA1 baa271a40dfef9775b22398d2e2caebd863d0006 SHA256 631e8b5f53c165d68479d61f7dd6a4942d3333444ef46bfd58767879b8a3b115
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
